--- a/Pages/_Host.cshtml
+++ b/Pages/_Host.cshtml
@@ -31,6 +31,9 @@
     <link rel="manifest" href="~/site.webmanifest">
     <meta name="theme-color" content="#6196f4">
 
+    <!--Mudblazor References-->
+    <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap" rel="stylesheet" />
+    <link href="_content/MudBlazor/MudBlazor.min.css" rel="stylesheet" />
 
     <!-- Google Tag Manager -->
     <script>
@@ -72,6 +75,7 @@
         <a class="dismiss">🗙</a>
     </div>
 
+    <script src="_content/MudBlazor/MudBlazor.min.js"></script>
     <script src="_framework/blazor.server.js"></script>
     <script src="https://cdn.lordicon.com/ritcuqlt.js"></script>
 </body>
