--- a/Pages/User/About.razor
+++ b/Pages/User/About.razor
@@ -2,15 +2,15 @@
 
 <PageTitle>About</PageTitle>
 
-<header class="bg-white py-5 medbase-font">
+<header class="py-5 medbase-font">
     <div class="container px-5">
         <div class="row gx-5 align-items-center justify-content-center">
             <div class="col-lg-6 col-xl-6 col-xxl-4">
                 <div class="my-5 text-center text-xl-start">
-                    <h1 class="display-5 fw-bolder text-dark mb-2">
+                    <h1 class="display-5 fw-bolder mb-2">
                         About Medbase😍
                     </h1>
-                    <p class="lead fw-normal text-muted mb-0">
+                    <p class="lead fw-normal mb-0">
                         Medbase is built around the best learning practises of spaced repetition and
                         active recall. All the questions are available for ease of access to medical students, pharmacy students and everyone in the
                         health sciences field.
@@ -33,17 +33,17 @@
 <section class="py-5 medbase-font">
     <div class="container px-5">
         <div class="text-center mb-5">
-            <i class="bi bi-envelope text-dark"></i>
+            <i class="bi bi-envelope"></i>
             <h1 class="fw-bolder">Get in touch📞</h1>
-            <p class="lead fw-normal text-muted mb-0">I'd love to hear from you</p>
+            <p class="lead fw-normalmb-0">I'd love to hear from you</p>
         </div>
 
         <!-- Contact cards-->
         <div class="row gx-5 row-cols-2 py-5 text-center">
             <div class="col text-center">
-                <i class="bi bi-whatsapp text-dark">🗨️</i>
+                <i class="bi bi-whatsapp">🗨️</i>
                 <div class="h5 mb-2">Chat with me</div>
-                <p class="text-muted mb-0">
+                <p class="mb-0">
                     If WhatsApp is your preferred channel of communication,
                     <a href="https://wa.me/263718086035">
                         have at it.
@@ -53,7 +53,7 @@
             <div class="col text-center">
                 <i class="bi bi-envelope text-dark">📧</i>
                 <div class="h5">Send me an email</div>
-                <p class="text-muted mb-0">
+                <p class="mb-0">
                     Get in touch at
                     <a href="mailto:admin@medbase.co.zw?subject=Medbase:%20<Subject%20here>">
                         admin@medbase.co.zw
@@ -69,18 +69,18 @@
         <div class="text-center mb-5">
             <i class="bi bi-laptop text-dark"></i>
             <h1 class="fw-bolder">Website Info🫡</h1>
-            <p class="lead fw-normal text-muted mb-0">How this website was made🔧</p>
+            <p class="lead fw-normal mb-0">How this website was made🔧</p>
         </div>
 
-        <p class="lead text-dark mb-1 text-center">
+        <p class="lead mb-1 text-center">
             This website was coded using C# 11 on the dotNET 7 platform.
             <br />
             Blazor
         </p>
         <div class="col text-center">
-            <i class="bi bi-globe text-dark"></i>
+            <i class="bi bi-globe"></i>
             <div class="h5">Visit my website</div>
-            <p class="text-muted mb-0">
+            <p class="mb-0">
                 Get in touch at
                 <a href="https://www.tanakamawere.co.zw">
                     www.tanakamawere.co.zw
