--- a/Pages/User/Topics.razor
+++ b/Pages/User/Topics.razor
@@ -2,6 +2,7 @@
 @using MedbaseBlazor.Models
 @using MedbaseBlazor.Repositories
 @inject IApiRepository repository
+@inject IDialogService DialogService
 
 <PageTitle>Topics</PageTitle>
 
@@ -27,21 +28,24 @@
                 <Virtualize Items="TopicsList.ToList()" TItem="Topic" Context="item">
                     <ItemContent>
                         <div class="col-lg-4 mb-2">
-                            <div class="card h-100 shadow border-0">
+                            <MudCard>
+                                <MudCardHeader>
+                                    <CardHeaderContent>
+                                        <MudText Typo="Typo.h6">
+                                            @item.Name
+                                        </MudText>
+                                    </CardHeaderContent>
+                                    <CardHeaderActions>
+                                        <MudIconButton Icon="@Icons.Material.Filled.Settings" Color="Color.Default" />
+                                    </CardHeaderActions>
+                                </MudCardHeader>
+                                <MudCardActions>
+                                    <MudButton Variant="Variant.Text" Color="Color.Primary" Href="@($"questions/{item.TopicRef}")">View</MudButton>
+                                    <MudButton Variant="Variant.Text" Color="Color.Secondary" @onclick="() => OpenDialog(item.TopicRef)">Quiz</MudButton>
+                                </MudCardActions>
+                            </MudCard>
+                            @*<div class="card h-100 shadow border-0">
                                 <div class="card-body p-4">
-                                    <h5 class="card-title mb-3">
-                                        @item.Name
-                                    </h5>
-                                    <div class="row text-center">
-                                        <div class="col-6">
-                                            <a class="btn btn-primary" href="@($"questions/{item.TopicRef}")">View😆</a>
-                                        </div>
-                                        <div class="col-6">
-                                            <button class="btn btn-primary" @onclick="() => CustomiseQuiz(item.TopicRef)">
-                                                Quiz🤔
-                                            </button>
-                                        </div>
-                                    </div>
                                     <div class="container-fluid text-center border-0 shadow card-footer mt-2" style="display:@(showCustomisation.Equals(true) && topicToCustomise == item.TopicRef ? "block" : "none")">
                                         <h6 class="fw-bold">Customise Quiz🛠️z</h6>
 
@@ -60,7 +64,7 @@
                                         </a>
                                     </div>
                                 </div>
-                            </div>
+                            </div>*@
                         </div>
                     </ItemContent>
                 </Virtualize>
@@ -93,5 +97,11 @@
             showCustomisation = true;
         else if (showCustomisation.Equals(true))
             showCustomisation = false;
+    }
+
+    private void OpenDialog(int topic)
+    {
+        var options = new DialogOptions { CloseOnEscapeKey = true };
+        DialogService.Show<QuizCustomisationDialog>(topic.ToString(), options);
     }
 }
