--- a/_Imports.razor
+++ b/_Imports.razor
@@ -12,3 +12,5 @@
 @using MedbaseBlazor.Models
 @using MedbaseBlazor.Pages.Admin
 @using MedbaseBlazor.Pages.User
+@using MedbaseBlazor.Pages.Views
+@using MudBlazor
