--- a/Pages/User/About.razor
+++ b/Pages/User/About.razor
@@ -45,9 +45,9 @@
                 <div class="h5 mb-2">Chat with me</div>
                 <p class="mb-0">
                     If WhatsApp is your preferred channel of communication,
-                    <a href="https://wa.me/263718086035">
+                    <MudLink href="https://wa.me/263718086035">
                         have at it.
-                    </a>
+                    </MudLink>
                 </p>
             </div>
             <div class="col text-center">
@@ -55,9 +55,9 @@
                 <div class="h5">Send me an email</div>
                 <p class="mb-0">
                     Get in touch at
-                    <a href="mailto:admin@medbase.co.zw?subject=Medbase:%20<Subject%20here>">
+                    <MudLink href="mailto:admin@medbase.co.zw?subject=Medbase:%20<Subject%20here>">
                         admin@medbase.co.zw
-                    </a>
+                    </MudLink>
                 </p>
             </div>
         </div>
