--- a/Pages/Admin/AdminLayout.razor
+++ b/Pages/Admin/AdminLayout.razor
@@ -2,34 +2,54 @@
 
 <PageTitle>Medbase Admin</PageTitle>
 
-<MudThemeProvider />
+<MudThemeProvider @ref="@_mudThemeProvider" @bind-IsDarkMode="@_isDarkMode" />
 
 <MudLayout>
     <MudAppBar Elevation="1">
         <MudIconButton Icon="@Icons.Material.Filled.Menu" Color="Color.Inherit" Edge="Edge.Start" OnClick="@((e) => DrawerToggle())" />
-        <MudText Typo="Typo.h5" Class="ml-3">Application</MudText>
+        <MudText Typo="Typo.h5" Class="ml-3">Medbase Admin</MudText>
         <MudSpacer />
         <MudIconButton Icon="@Icons.Material.Filled.MoreVert" Color="Color.Inherit" Edge="Edge.End" />
     </MudAppBar>
     <MudDrawer @bind-Open="_drawerOpen" ClipMode="DrawerClipMode.Always" Elevation="2">
         <MudNavMenu Bordered="true">
-            <MudNavLink Href="/admin/courses">Courses</MudNavLink>
-            <MudNavLink Href="/admin/topics">Topics</MudNavLink>
-            <MudNavLink Href="/admin/Questions">Questions</MudNavLink>
-            <MudNavLink Href="/admin/Articles">Articles</MudNavLink>
-            <MudNavLink Href="/home">Go To Medbase</MudNavLink>
+            <MudNavLink Href="/admin/courses" Icon="@Icons.Material.Filled.Book">Courses</MudNavLink>
+            <MudNavLink Href="/admin/topics" Icon="@Icons.Material.Filled.LibraryBooks">Topics</MudNavLink>
+            <MudNavLink Href="/admin/Questions" Icon="@Icons.Material.Filled.QuestionAnswer">Questions</MudNavLink>
+            <MudNavLink Href="/admin/Articles" Icon="@Icons.Material.Filled.Newspaper">Articles</MudNavLink>
+            <MudNavLink Href="/home" Icon="@Icons.Material.Filled.ArrowUpward">Go To Medbase</MudNavLink>
         </MudNavMenu>
     </MudDrawer>
     <MudMainContent>
-        @Body
+        <div class="container">
+            @Body
+        </div>
     </MudMainContent>
 </MudLayout>
 
 @code {
     bool _drawerOpen = true;
+    private MudThemeProvider _mudThemeProvider;
+    private bool _isDarkMode;
 
     void DrawerToggle()
     {
         _drawerOpen = !_drawerOpen;
+    }
+
+    protected override async Task OnAfterRenderAsync(bool firstRender)
+    {
+        if (firstRender)
+        {
+            _isDarkMode = await _mudThemeProvider.GetSystemPreference();
+            await _mudThemeProvider.WatchSystemPreference(OnSystemPreferenceChanged);
+            StateHasChanged();
+        }
+    }
+
+    private async Task OnSystemPreferenceChanged(bool newValue)
+    {
+        _isDarkMode = newValue;
+        StateHasChanged();
     }
 }
