--- a/Pages/User/Courses.razor
+++ b/Pages/User/Courses.razor
@@ -6,12 +6,7 @@
 <PageTitle>Courses</PageTitle>
 <div class="container">
 
-    <nav style="--bs-breadcrumb-divider: '>';" aria-label="breadcrumb">
-        <ol class="breadcrumb">
-            <li class="breadcrumb-item"><a href="/">Home</a></li>
-            <li class="breadcrumb-item active" aria-current="page">Courses</li>
-        </ol>
-    </nav>
+    <MudBreadcrumbs Items="_items"></MudBreadcrumbs>
 
     @if (!CoursesList.Any())
     {
@@ -48,6 +43,12 @@
 
 @code {
     private IEnumerable<Course> CoursesList { get; set; } = Enumerable.Empty<Course>();
+
+    private List<BreadcrumbItem> _items = new List<BreadcrumbItem>
+    {
+        new BreadcrumbItem("Home", href: "#", icon: Icons.Material.Filled.Home),
+        new BreadcrumbItem("Courses", href: "/courses", icon: Icons.Material.Filled.Book)
+    };
 
     protected override Task OnInitializedAsync() => GetArticlesAsync();
 
