--- a/Pages/User/Questions.razor
+++ b/Pages/User/Questions.razor
@@ -1,21 +1,14 @@
 ﻿@page "/questions/{topicRef:int}"
 @using MedbaseBlazor.Models
 @using MedbaseBlazor.Repositories
+@inject IDialogService DialogService
 @inject IApiRepository repository
 @using Markdig
 
 <PageTitle>Questions</PageTitle>
+<div class="container">
 
-<div class="text-center">
-
-    <nav style="--bs-breadcrumb-divider: '>';" aria-label="breadcrumb">
-        <ol class="breadcrumb">
-            <li class="breadcrumb-item"><a href="/">Home</a></li>
-            <li class="breadcrumb-item"><a href="/courses">Courses</a></li>
-            <li class="breadcrumb-item"><a href="/courses">Topics</a></li>
-            <li class="breadcrumb-item active" aria-current="page">Questions</li>
-        </ol>
-    </nav>
+    <MudBreadcrumbs Items="_items"></MudBreadcrumbs>
 
     @if (!QuestionPaged.Questions.Any())
     {
@@ -34,24 +27,7 @@
             <TopNavBar>
                 <div class="container align-content-center justify-content-center text-center">
                     <div class="row">
-                        <div class="row col">
-                            <div class="col-4">
-                                <button @onclick="() => GetQuestions(QuestionPaged.CurrentPage -1)" class="btn btn-outline-light @(!(QuestionPaged.CurrentPage > 1) ? "disabled" : "")">
-                                    Previous
-                                </button>
-                            </div>
-                            <div class="col-4 text-center">
-                                <p style="font-size:small">
-                                    Page @QuestionPaged.CurrentPage / @QuestionPaged.Pages
-                                </p>
-                            </div>
-                            <div class="col-4">
-                                <button @onclick="() => GetQuestions(QuestionPaged.CurrentPage +1)"
-                                        class="btn btn-outline-light @(!(QuestionPaged.CurrentPage < QuestionPaged.Pages) ? "disabled" : "")">
-                                    Next
-                                </button>
-                            </div>
-                        </div>
+                        
                         <div class="col-2 align-self-center" @onclick="() => OpenSearchBar()">
                             <span class="oi oi-magnifying-glass text-white" aria-hidden="true"></span>
                         </div>
@@ -71,106 +47,107 @@
                 </div>
             </TopNavBar>
         </div>
-        <div style="margin-bottom:110px;">
+
+        <MudPaper Elevation="25" Class="m-2">
+            <MudToolBar>
+                <MudIconButton Icon="@Icons.Material.Outlined.Menu" />
+                <MudGrid Spacing="1" Justify="Justify.Center">
+                    <MudButton @onclick="() => GetQuestions(QuestionPaged.CurrentPage -1)" class="@(!(QuestionPaged.CurrentPage > 1) ? "disabled" : "")">
+                        Previous
+                    </MudButton>
+                    <MudButton Disabled="true" Typo="Typo.caption" Align="Align.Center">
+                        Page @QuestionPaged.CurrentPage / @QuestionPaged.Pages
+                    </MudButton>
+                    <MudButton @onclick="() => GetQuestions(QuestionPaged.CurrentPage +1)"
+                               class="@(!(QuestionPaged.CurrentPage < QuestionPaged.Pages) ? "disabled" : "")">
+                        Next
+                    </MudButton>
+                </MudGrid>
+                <MudIconButton Icon="@Icons.Material.Outlined.Search"  />
+            </MudToolBar>
+        </MudPaper>
+        <div>
             <Virtualize Items="QuestionPaged.Questions.ToList()" Context="question" TItem="Question">
                 <ItemContent>
-
-                    <div class="container-fluid">
-                        <!--Question-->
-                        <div class="row">
-                            <div class="col">
-                                <h5 class="h5">
+                    <MudCard class="mb-2">
+                        <MudCardHeader>
+                            <CardHeaderContent>
+                                <MudText Typo="Typo.h6">
                                     @question.Id - @question.QuestionMain
-                                </h5>
-                            </div>
-                            <div class="col col-2">
-                                <a class="btn"
-                                   href="https://wa.me/263718086035?text=Questions%20ID:%20@(question.Id)%20has%20an%20error.%20(Please%20write%20your%20suggested%20answers%20here.)">
-                                    <i class="bi bi-flag text-dark"
-                                       style="font-size:small"></i>
-                                </a>
-                            </div>
-                        </div>
-                        <input hidden asp-for="@question.Id" />
-                        <div class="text-start">
+                                </MudText>
+                            </CardHeaderContent>
+                            <CardHeaderActions>
+                                <MudIconButton Icon="@Icons.Material.Filled.Feedback" OnClick="() => OpenDialog(question.Id)" Color="Color.Default" />
+                            </CardHeaderActions>
+                        </MudCardHeader>
+                        <MudCardContent>
+                            <input hidden asp-for="@question.Id" />
                             <!--Child1-->
                             <div>
-                                <div class="col">
-                                    <p class="card-text">a) @question.ChildA</p>
-                                </div>
-                                <div class="container card h-100 border-1" style="display:@(Answers == 1 && qts == question.Id ? "block" : "none")">
-                                    <div class="card-body p-1">
-                                        <p class="card-text">
+                                <MudText>a) @question.ChildA</MudText>
+                                <div style="display:@(Answers == 1 && qts == question.Id ? "block" : "none")">
+                                    <MudPaper Outlined="true" Class="p-1">
+                                        <MudText>
                                             @question.AnswerA.ToString()
-                                        </p>
+                                        </MudText>
                                         @((MarkupString)Markdown.ToHtml(question.ExplanationA == null ? " " : question.ExplanationA))
-                                    </div>
+                                    </MudPaper>
                                 </div>
                             </div>
                             <!--Child2-->
                             <div>
-                                <div class="col">
-                                    <p class="card-text">b) @question.ChildB</p>
-                                </div>
-                                <div class="container card h-100 border-1" style="display:@(Answers == 1 && qts == question.Id ? "block" : "none")">
-                                    <div class="card-body p-1">
-                                        <p class="card-text">
+                                <MudText>b) @question.ChildB</MudText>
+                                <div style="display:@(Answers == 1 && qts == question.Id ? "block" : "none")">
+                                    <MudPaper Outlined="true" Class="p-1">
+                                        <MudText>
                                             @question.AnswerB.ToString()
-                                        </p>
+                                        </MudText>
                                         @((MarkupString)Markdown.ToHtml(question.ExplanationB == null ? " " : question.ExplanationB))
-                                    </div>
+                                    </MudPaper>
                                 </div>
                             </div>
                             <!--Child3-->
                             <div>
-                                <div class="col">
-                                    <p class="card-text">c) @question.ChildC</p>
-                                </div>
-                                <div class="container card h-100 border-1" style="display:@(Answers == 1 && qts == question.Id ? "block" : "none")">
-                                    <div class="card-body p-1">
-                                        <p class="card-text">
+                                <MudText>c) @question.ChildC</MudText>
+                                <div style="display:@(Answers == 1 && qts == question.Id ? "block" : "none")">
+                                    <MudPaper Class="p-1" Outlined="true">
+                                        <MudText>
                                             @question.AnswerC.ToString()
-                                        </p>
+                                        </MudText>
                                         @((MarkupString)Markdown.ToHtml(question.ExplanationC == null ? " " : question.ExplanationC))
-                                    </div>
+                                    </MudPaper>
                                 </div>
                             </div>
                             <!--Child4-->
                             <div>
-                                <div class="col">
-                                    <p class="card-text">d) @question.ChildD</p>
-                                </div>
-                                <div class="container card h-100 border-1" style="display:@(Answers == 1 && qts == question.Id ? "block" : "none")">
-                                    <div class="card-body p-1">
-                                        <p class="card-text">
+                                <MudText>d) @question.ChildD</MudText>
+                                <div style="display:@(Answers == 1 && qts == question.Id ? "block" : "none")">
+                                    <MudPaper Outlined="true" Class="p-1">
+                                        <MudText>
                                             @question.AnswerD.ToString()
-                                        </p>
+                                        </MudText>
                                         @((MarkupString)Markdown.ToHtml(question.ExplanationD == null ? " " : question.ExplanationD))
-                                    </div>
+                                    </MudPaper>
                                 </div>
                             </div>
                             <!--Child5-->
                             <div>
-                                <div class="col">
-                                    <p class="card-text">e) @question.ChildE</p>
-                                </div>
-                                <div class="container card h-100 border-1" style="display:@(Answers == 1 && qts == question.Id ? "block" : "none")">
-                                    <div class="card-body p-1">
-                                        <p class="card-text">
+                                <MudText>e) @question.ChildE</MudText>
+
+                                <div style="display:@(Answers == 1 && qts == question.Id ? "block" : "none")">
+                                    <MudPaper Class="p-1" Outlined="true">
+                                        <MudText>
                                             @question.AnswerE.ToString()
-                                        </p>
+                                        </MudText>
                                         @((MarkupString)Markdown.ToHtml(question.ExplanationE == null ? " " : question.ExplanationE))
-                                    </div>
+                                    </MudPaper>
                                 </div>
                             </div>
-                        </div>
-                    </div>
-                    <div class="justify-content-sm-center justify-content-xl-start text-center m-2">
-                        <button class="btn btn-outline-primary px-4" @onclick="() => ShowAnswers(question.Id)">
-                            <span class="oi oi-envelope-open" aria-hidden="true"></span>
-                        </button>
-                    </div>
-
+                        </MudCardContent>
+                        <MudCardActions class="justify-content-end">
+                            <MudButton Variant="Variant.Text" OnClick="() => ShowAnswers(question.Id)" Color="Color.Primary">Answers</MudButton>
+                        </MudCardActions>
+                    </MudCard>
                 </ItemContent>
             </Virtualize>
         </div>
@@ -183,10 +160,19 @@
     [Parameter]
     public int topicRef { get; set; } = 0;
     public int Answers { get; set; } = 0;
+    private int paginationPage = 1;
     public bool searchBarOpen = false;
     public bool searchResultsNull = false;
     private string searchTerm = "";
     public int qts;
+
+    private List<BreadcrumbItem> _items = new List<BreadcrumbItem>
+    {
+        new BreadcrumbItem("Home", href: "#", icon: Icons.Material.Filled.Home),
+        new BreadcrumbItem("Courses", href: "/courses", icon: Icons.Material.Filled.Book),
+        new BreadcrumbItem("Topics", href: "/courses", icon: Icons.Material.Filled.LibraryBooks),
+        new BreadcrumbItem("Questions", href: "/courses", icon: Icons.Material.Filled.QuestionAnswer)
+    };
 
     QuestionPaged QuestionPaged = new ();
 
@@ -214,5 +200,16 @@
     }
     private void OpenSearchBar() => searchBarOpen = !searchBarOpen;
 
-
+    private void OpenDialog(int questionId)
+    {
+        var parameters = new DialogParameters<CorrectionsDialog>();
+        parameters.Add(x => x.questionId, questionId);
+        var options = new DialogOptions()
+            {
+                CloseButton = true,
+                MaxWidth = MaxWidth.ExtraSmall,
+                Position = DialogPosition.Center,
+            };
+        DialogService.Show<CorrectionsDialog>("Submit Answer Correction", parameters, options);
+    }
 }
