--- a/Shared/MainLayout.razor
+++ b/Shared/MainLayout.razor
@@ -9,12 +9,25 @@
 <MudLayout>
     <MudAppBar Elevation="1">
         <MudIconButton Icon="@Icons.Material.Filled.Menu" Color="Color.Inherit" Edge="Edge.Start" OnClick="@((e) => DrawerToggle())" />
-        <MudText Typo="Typo.h5" Class="ml-3">Medbase</MudText>
-        <MudSpacer />
-        <MudSwitch @bind-Checked="@_isDarkMode" Color="Color.Primary" Class="ma-4" T="bool" Label="Dark/Light" />
+        <MudLink Typo="Typo.h6" Class="ml-3" Href="/home" Color="Color.Default">
+            Medbase
+        </MudLink>
     </MudAppBar>
     <MudDrawer @bind-Open="_drawerOpen" ClipMode="DrawerClipMode.Always" Elevation="2">
-        <NavMenu />
+        <MudNavMenu Rounded="true" Margin="Margin.Dense" Color="Color.Primary" Class="pa-2">
+
+            <MudNavLink Href="/home" Icon="@Icons.Material.Filled.Dashboard">Home</MudNavLink>
+            <MudNavLink Href="/courses" Icon="@Icons.Material.Filled.Book">Courses</MudNavLink>
+            <MudNavLink Href="/articles" Icon="@Icons.Material.Filled.Newspaper">Articles</MudNavLink>
+            <MudNavLink Href="/about" Icon="@Icons.Material.Filled.QuestionAnswer">About</MudNavLink>
+
+            <MudDivider/>
+
+            <MudNavLink OnClick="ThemeToggle" Icon="@(_isDarkMode == true ? Icons.Material.Filled.DarkMode : Icons.Material.Filled.LightMode)">
+                @(_isDarkMode == true ? "Dark Mode On" : "Dark Mode Off")
+            </MudNavLink>
+
+        </MudNavMenu>
     </MudDrawer>
     <MudMainContent>
         @Body
@@ -29,6 +42,9 @@
     {
         _drawerOpen = !_drawerOpen;
     }
+
+    void ThemeToggle() =>
+        _isDarkMode = !_isDarkMode;
 
     protected override async Task OnAfterRenderAsync(bool firstRender)
     {
